flexbox for project

--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!doctype html>
-<title>Example</title>
-<html>
+<html lang="eng">
+<title>Adopt Me</title>
 <head>
+    <style>
+  
+
+</style>
+</head>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Adopt Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Fira Sans" rel="stylesheet"/>
     <script src="main.js"></script>
 </head>
 <body>
-  <header>Header</header>
-  <div id="main">
-    <article>Article</article>
-    <nav>Nav</nav>
-    <aside>Aside</aside>
-  </div>
-  <footer>Footer</footer>
+<main>
+    <ul class="adoptme" role="navigation">
+        <li class="adopt_me"><nav class="Adopt Me"><span style="color: black">Adopt</span> <em>Me</em></nav></li>
+        <li><nav class="About Us">About Us</nav></li>
+        <li><nav class="What we do">What we do</nav></li>
+        <li><nav class="Benefits">Benefits</nav></li>
+        <li><nav class="Our Buddies">Our Buddies</nav></li>
+        <li class="contact_us"><button type="button">Contact Us</button></li>
+    </ul>
+</main>
+  
+
+  <h1>Do you think about <em>adopting</em> a friend?</h1>
+    <p>We will help you choose the best buddy that fits your family and home perfectly.</p>  
+  
+    <button type="button">Find out how</button>
+
 </body>
