next to last commit before submission

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 </style>
 </head>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Adopt Me</title>
@@ -20,19 +19,17 @@
 <body>
 <main>
     <ul class="adoptme" role="navigation">
-        <li class="adopt_me"><nav class="Adopt Me"><span style="color: black">Adopt</span> <em>Me</em></nav></li>
+        <li class="adopt_me"><nav class="Adopt Me"><span style="color: black"><h2>Adopt</span> <em>Me</em></h2></nav></li>
         <li><nav class="About Us">About Us</nav></li>
         <li><nav class="What we do">What we do</nav></li>
         <li><nav class="Benefits">Benefits</nav></li>
         <li><nav class="Our Buddies">Our Buddies</nav></li>
         <li class="contact_us"><button type="button">Contact Us</button></li>
     </ul>
+
+  <h1>Do you think about <em>adopting</em> a <br>friend?</h1>
+    <p>We will help you choose the best buddy that fits your family <br>and home perfectly.</p>  
+  
+    <div class="find_out_how"><button type="button">Find out how</button></div>
 </main>
-  
-
-  <h1>Do you think about <em>adopting</em> a friend?</h1>
-    <p>We will help you choose the best buddy that fits your family and home perfectly.</p>  
-  
-    <button type="button">Find out how</button>
-
 </body>
